src/objects/Email_Template_Field__c.object
<CustomObject>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <referenceTo>Email_Template__c</referenceTo>
        <relationshipLabel>Email Template Fields</relationshipLabel>
        <relationshipName>Email_Template_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <referenceTo>Field__c</referenceTo>
        <relationshipLabel>Email Template Fields</relationshipLabel>
        <relationshipName>Email_Template_Fields</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Email Template Field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Template Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>